[package]
name = "libc_call_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
crossbeam-channel = "0.5.6"
ctor = "0.1.23"
frida-gum = "0.8.1"
lazy_static = "1.4.0"
libc = "0.2.134"
once_cell = "1.15.0"
